<resources>
    <string name="text_i_introduce_page1">i</string>
    <string name="text_line_1_introduce_page1">Gap</string>
    <string name="text_line_2_introduce_page1">Limitless Connection</string>
    <string name="text_line_3_introduce_page1">Build your own world by iGap right now.</string>
    <string name="text_line_4_introduce_page1">It takes only few minutes to join iGap community!</string>
    <string name="text_line_1_introduce_page2">Security &amp; Privacy</string>
    <string name="text_line_2_introduce_page2">iGap attaches the utmost importance to your security and privacy using the individual encryption algorithms and guarantees a safe and secure connection between you, your friends and family.</string>
    <string name="text_line_1_introduce_page3">Chat</string>
    <string name="text_line_2_introduce_page3">You can have one-on-one or group chats and even create your own channel and add members in order to share information with millions of people.</string>
    <string name="text_line_1_introduce_page4">File Transferring</string>
    <string name="text_line_2_introduce_page4">You have an authority to transfer any file with any size and type or save them on your cloud storage; and then share anything you’d like to with anyone you’d want to.</string>
    <string name="text_line_1_introduce_page5">Voice Call</string>
    <string name="text_line_2_introduce_page5">You can make thoroughly free and secure voice calls to anyone on iGap and save your money. iGap voice call is P2P-based with no server\'s interference in voice transmission.</string>
    <string name="btn_start_page6">Start Now</string>
    <string name="text_line_1_introduce_page6">Everything for Free in iGap!</string>
    <string name="text_line_2_introduce_page6">Let’s stop waiting! \n iGap is thoroughly free. So, just now build your own world freely.</string>
    <string name="pu_title_profileUser">Complete Your User Profile</string>
    <string name="pu_desc_profileUser">Enter your Nickname and select a photo as your Profile Avatar/Picture</string>
    <string name="pu_addPhoto_profileUser">Profile Picture</string>
    <string name="pu_nikname_profileUser">First Name</string>
    <string name="pu_Lets_Go">Continue</string>
    <string name="rg_title_register">Registration</string>
    <string name="rg_confirm_text_register">Please confirm your country name and code then enter your phone number without its first zero/0</string>
    <string name="rg_Start">Let\'s Go</string>
    <string name="rg_Select_Country">Select your Country</string>
    <string name="rg_agreement_text_register">Recheck and confirm your phone number! We\'re sending a verification code to this number</string>
    <string name="rg_verify_register1">Connecting</string>
    <string name="rg_verify_register2">Waiting for the Code</string>
    <string name="rg_verify_register3">Creating Security Key</string>
    <string name="rg_verify_register4">Finalizing Registration</string>
    <string name="rg_verify_dialog_try_code">I entered manually</string>
    <string name="rg_verify_dialog_resend_code">Resend Code</string>
    <string name="Re_dialog_verify_number_part1">You have entered this number :</string>
    <string name="Re_dialog_verify_number_part2">Tap OK if this entered phone number is correct or simply modify it if wrong.</string>
    <string name="Re_Enter_Verify_Code_Please">Please enter the verification code</string>
    <string name="verify_socket_message">You have logged into your account on another device and iGap has sent a verification code via its Notification Service in your account, Please check another device and enter the verification code.</string>
    <string name="verify_time_out_message">iGap recognizes the code automatically; if not, enter it manually. (Please ask the app to resend the verification code if you have not received it yet)</string>
    <string name="verify_invalid_code_message">Unfortunately; the verification code is invalid , Please enter the correct one manually.</string>
    <string name="resend_message">Resending the verification code</string>
    <string name="phone_number">Phone Number</string>
    <string name="Re_Phone_Verification">Verifying the entered phone number</string>
    <string name="Toast_waiting_fot_get_info">Connecting and getting Info...</string>
    <string name="Toast_Location_Not_Found">Location not found.</string>
    <string name="Toast_First_0">Don\'t need 0 at the beginning</string>
    <string name="Toast_Enter_Phone_Number">Please enter your phone number without the first zero/0</string>
    <string name="Toast_Minimum_Characters">The number of characters is less than the limit</string>
    <string name="Toast_Enter_Code">Please enter the verification code</string>
    <string name="Toast_Number_Block">This number is blocked</string>
    <string name="Toast_time_wait">please wait until:</string>
    <string name="Toast_Invalid_nickname">Invalid Nickname,Please change it.</string>
    <string name="Toast_Write_NickName">Please enter your nickname</string>
    <string name="sure_delete_account">Are you sure you want to delete your account?</string>
    <string name="Destruction_Code">Destruction Code</string>
    <string name="Destruction_Des">Now you are deleting your account; your phone number is : </string>
    <string name="iGap_autofill_Destruction_Code">iGap automatically fills the field of Deletion Code; otherwise, fill it manually .</string>
    <string name="video_message">Video Message</string>
    <string name="file_message">File Message</string>
    <string name="audio_message">Audio Message</string>
    <string name="image_message">Image Message</string>
    <string name="contact_message">Contact Message</string>
    <string name="gif_message">Gif Message</string>
    <string name="voice_message">Voice Message</string>
    <string name="typing">typing…</string>
    <string name="sending_image">Sending image…</string>
    <string name="capturing_image">Capturing image…</string>
    <string name="sending_video">Sending video…</string>
    <string name="capturing_video">Capturing video…</string>
    <string name="sending_audio">Sending audio…</string>
    <string name="recording_voice">Recording voice…</string>
    <string name="sending_voice">Sending voice…</string>
    <string name="sending_document">Sending document…</string>
    <string name="sending_gif">Sending gif…</string>
    <string name="sending_file">Sending file…</string>
    <string name="sending_location">Sending location…</string>
    <string name="choosing_contact">Choosing contact…</string>
    <string name="painting">Painting…</string>
    <string name="log_out">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="mute_notification">Mute Notification</string>
    <string name="pin_to_top">Pin to top</string>
    <string name="Unpin_to_top">UnPin from top</string>
    <string name="unmute_notification">Unmute Notification</string>
    <string name="clear_history">Clear History</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="left_group">Leave Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="search">Search</string>
    <string name="d_of_d" formatted="false">%d of %d</string>
    <string name="add_to_contact">Add to Contact</string>
    <string name="app_name">iGap</string>
    <string name="call_name">iGap Voice Call</string>
    <string name="chat">Chat</string>
    <string name="group">Group</string>
    <string name="channel">Channel</string>
    <string name="igap">iGap</string>
    <string name="igapChanel">iGap</string>
    <string name="clear_history_content">Are you sure you want to clear history?</string>
    <string name="delete_chat_content">Are you sure you want to delete this chat?</string>
    <string name="delete_text">Are you sure you want to delete this contact?</string>
    <string name="cancel">Cancel</string>
    <string name="B_cancel">Cancel</string>
    <string name="B_skip">Skip</string>
    <string name="B_finish">Finish</string>
    <string name="ok">Ok</string>
    <string name="B_ok">Ok</string>
    <string name="set">Confirm</string>
    <string name="am_camera">Camera</string>
    <string name="am_music">Music</string>
    <string name="am_paint">Paint</string>
    <string name="am_picture">Picture</string>
    <string name="am_document">Document</string>
    <string name="am_location">Location</string>
    <string name="am_video">Video</string>
    <string name="am_file">File</string>
    <string name="am_contact">Contact</string>
    <string name="just_wait_en">Please Wait</string>
    <string name="device_dosenot_camera_en">This device does not have a camera.</string>
    <string name="do_you_want_to_turn_on_gps">Your GPS is off, do you want to turn it on?</string>
    <string name="picture_is_saved_en">The Picture was Saved.</string>
    <string name="select_picture_en">Select Picture</string>
    <string name="cannot_load_data_en">Unable to load data.</string>
    <string name="do_you_want_exit">Do you want to exit?</string>
    <string name="slide_to_cancel_en">Slide to Cancel</string>
    <string name="video_duration" formatted="false">%s (%s)</string>
    <string name="st_Info">Account Info</string>
    <string name="st_Language">Language</string>
    <string name="st_titleToolbar">Settings</string>
    <string name="st_title_general">General Settings</string>
    <string name="st_username">Username</string>
    <string name="st_nickname">First Name</string>
    <string name="st_contactName">Contact Name</string>
    <string name="st_phoneNumber">Phone Number</string>
    <string name="st_title_info">Information</string>
    <string name="st_title_notification_sounds">Notifications and Sounds</string>
    <string name="st_title_Clear_Cache">Clear Cache</string>
    <string name="st_title_Privacy_Security">Privacy and Security</string>
    <string name="st_title_message">Message Room</string>
    <string name="st_title_message_textSize">Text Message Size</string>
    <string name="st_stickers">Stickers and Pictures</string>
    <string name="st_chatBackground">Chat Background</string>
    <string name="st_Enable_Animation">Enable Animations</string>
    <string name="set_admin">Assign Admin</string>
    <string name="set_modereator">Assign Moderator</string>
    <string name="set_kick">Kick out</string>
    <string name="remove_admin">Remove Admin</string>
    <string name="remove_moderator">Remove Moderator</string>
    <string name="device">Device:</string>
    <string name="country">Country:</string>
    <string name="create_time">Create on:</string>
    <string name="ip">IP:</string>
    <string name="current_session">Current Session</string>
    <string name="do_you_want_to_delet_this_chat">Do you want to delete this chat?</string>
    <string name="number">Number</string>
    <string name="TERMINATE">"TERMINATE"</string>
    <string name="two_step_verification_title">Two-Step Verification</string>
    <string name="please_enter_your_password">Please enter your Password</string>
    <string name="password_Question_title_one">Question one (Required)</string>
    <string name="password_Question_one">eg: Who is your Favorite teacher?</string>
    <string name="password_Question_title_two">Question two (Required)</string>
    <string name="password_Question_two">eg: Who is your best friend?</string>
    <string name="password_answer">Answer</string>
    <string name="Recovery_with_email">Recovery via E-mail</string>
    <string name="recent_code">Recent code</string>
    <string name="enter_code">Enter your code</string>
    <string name="Recovery_with_question">Recovery with Question</string>
    <string name="lbl_brightness">Brightness</string>
    <string name="lbl_contrast">Contrast</string>
    <string name="lbl_saturation">Saturation</string>
</resources>