<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/rootFragmentSecurity"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/gray_f2"
  android:clickable="true"
  android:orientation="vertical"
  tools:context="net.iGap.fragments.FragmentSecurity"
  tools:ignore="MissingPrefix">


  <android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
      android:id="@+id/stps_backgroundToolbar"
      android:layout_width="match_parent"
      android:layout_height="@dimen/dp60"
      android:layoutDirection="ltr"
      android:padding="0dp"
      app:contentInsetLeft="0dp"
      app:contentInsetStart="0dp"
      tools:ignore="MissingPrefix">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <net.iGap.libs.rippleeffect.RippleView
          android:id="@+id/verifyPassword_rippleOk"
          rv_centered="true"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:visibility="visible"
          app:rv_alpha="200"
          app:rv_centered="true"
          app:rv_rippleDuration="0"
          app:rv_ripplePadding="5dp">

          <net.iGap.module.MaterialDesignTextView
            android:layout_width="@dimen/dp52"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/md_check_symbol"
            android:textAppearance="@style/TextIconAppearance_toolbar"
            android:textColor="@color/whit_background" />

        </net.iGap.libs.rippleeffect.RippleView>

        <TextView
          fontPath="fonts/IRANSansMobile_Bold.ttf"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true"
          android:layout_alignParentTop="true"
          android:gravity="center"
          android:text="@string/two_step_verification_title"
          android:textColor="@color/whit_background"
          android:textSize="@dimen/dp18"
          android:visibility="visible" />

        <net.iGap.libs.rippleeffect.RippleView
          android:id="@+id/tsv_ripple_back"
          rv_centered="true"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:rv_alpha="200"
          app:rv_centered="true"
          app:rv_rippleDuration="0"
          app:rv_ripplePadding="5dp">

          <net.iGap.module.MaterialDesignTextView
            android:layout_width="@dimen/dp52"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/md_back_arrow"
            android:textAppearance="@style/TextIconAppearance_toolbar"
            android:textColor="@color/whit_background"
            android:visibility="gone" />

        </net.iGap.libs.rippleeffect.RippleView>
      </RelativeLayout>
    </android.support.v7.widget.Toolbar>


  </android.support.design.widget.AppBarLayout>


  <LinearLayout
    android:id="@+id/rootEnterPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dp32"
      android:gravity="center"
      android:text="@string/please_enter_your_password"
      android:textColor="@color/gray_4c"
      android:textSize="@dimen/dp20" />


    <EditText
      android:id="@+id/setPassword_edtSetPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/dp32" />


    <TextView
      android:id="@+id/txtSkip"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/dp32"
      android:layout_marginLeft="@dimen/dp32"
      android:layout_marginRight="@dimen/dp32"
      android:layout_marginStart="@dimen/dp32"
      android:layout_marginTop="@dimen/dp60"
      android:gravity="left|start"
      android:text="@string/Recovery_with_email"
      android:textColor="@color/green"
      android:textSize="@dimen/dp14" />


    <TextView
      android:id="@+id/txtRecoveryEmail"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/dp32"
      android:layout_marginLeft="@dimen/dp32"
      android:layout_marginRight="@dimen/dp32"
      android:layout_marginStart="@dimen/dp32"
      android:layout_marginTop="@dimen/dp20"
      android:gravity="left|start"
      android:text="@string/Recovery_with_question"
      android:textColor="@color/green"
      android:textSize="@dimen/dp14" />


  </LinearLayout>

  <LinearLayout
    android:id="@+id/RootRecoveryQuestion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dp24"
      android:gravity="center"
      android:text="@string/password_Question_title_one"
      android:textColor="@color/gray_4c"
      android:textSize="@dimen/dp18" />

    <TextView
      android:id="@+id/edtSetQuestionPassOne"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/dp32"
      android:layout_marginRight="@dimen/dp32"
      android:layout_marginTop="@dimen/dp16"
      android:hint="@string/password_Question_one"
      android:textSize="@dimen/dp13"

      />

    <EditText
      android:id="@+id/edtSetAnswerPassOne"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/dp32"
      android:layout_marginRight="@dimen/dp32"
      android:hint="@string/password_answer"
      android:textSize="@dimen/dp13"

      />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dp24"
      android:gravity="center"
      android:text="@string/password_Question_title_two"
      android:textColor="@color/gray_4c"
      android:textSize="@dimen/dp18" />

    <TextView
      android:id="@+id/edtSetQuestionPassTwo"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/dp32"
      android:layout_marginRight="@dimen/dp32"
      android:layout_marginTop="@dimen/dp16"
      android:hint="@string/password_Question_two"
      android:textSize="@dimen/dp13"

      />

    <EditText
      android:id="@+id/edtSetAnswerPassTwo"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/dp32"
      android:layout_marginRight="@dimen/dp32"
      android:hint="@string/password_answer"
      android:textSize="@dimen/dp13" />

  </LinearLayout>

  <LinearLayout
    android:id="@+id/rootRecoveryEmail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dp32"
      android:gravity="center"
      android:text="@string/enter_code"
      android:textColor="@color/gray_4c"
      android:textSize="@dimen/dp20" />


    <EditText
      android:id="@+id/setPassword_edtSetPasswordRecoveryEmail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/dp32" />


    <TextView
      android:id="@+id/txtRecentRecoveryEmail"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/dp32"
      android:layout_marginLeft="@dimen/dp32"
      android:layout_marginRight="@dimen/dp32"
      android:layout_marginStart="@dimen/dp32"
      android:layout_marginTop="@dimen/dp60"
      android:gravity="left|start"
      android:text="@string/recent_code"
      android:textColor="@color/green"
      android:textSize="@dimen/dp14" />

  </LinearLayout>

</LinearLayout>
